src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-omT-ofT-dhP0.5-b-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen maximized: true\nopen floating: true\ndefault window height: P0.5\nborder on\ntabbed"
expression: snapshot
---
initial configure:
size: 0 × 352, bounds: 1272 × 712, states: []

post-map configures:
size: 1 × 1, bounds: 1272 × 712, states: [Activated]
